cmake_minimum_required(VERSION 2.8)
project(data_structure)
add_executable(MaxSubseqSum MaxSubseqSum.cpp)
add_executable(List List.cpp)
add_executable(Listinchain Listinchain.cpp)
add_executable(Stack Stack.cpp)
add_executable(Stackinchain Stackinchain.cpp)
add_executable(Quene Quene.cpp)
add_executable(Queneinchain Queneinchain.cpp)
add_executable(Polynomial Polynomial.cpp)