cmake_minimum_required(VERSION 2.8)
project(data_structure)
add_executable(MaxSubseqSum Linear_Structure/MaxSubseqSum.cpp)

add_executable(List Linear_Structure/List.cpp)
add_executable(Listinchain Linear_Structure/Listinchain.cpp)
add_executable(Stack Linear_Structure/Stack.cpp)
add_executable(Stackinchain Linear_Structure/Stackinchain.cpp)
add_executable(Quene Linear_Structure/Quene.cpp)
add_executable(Queneinchain Linear_Structure/Queneinchain.cpp)
add_executable(Polynomial Linear_Structure/Polynomial.cpp)
add_executable(ReverseLinkedList Linear_Structure/ReverseLinkedList.cpp)

add_executable(Binarysearch Tree/Binarysearch.cpp)
add_executable(BinTree Tree/BinTree.cpp)
add_executable(HomoTree Tree/HomoTree.cpp)
add_executable(BinarySearchTree Tree/BinarySearchTree.cpp)
add_executable(BalancedBinaryTree Tree/BalancedBinaryTree.cpp)
add_executable(IsSameBST Tree/IsSameBST.cpp)
add_executable(MaxHeap Heap&Set/MaxHeap.cpp)
add_executable(MinHeap Heap&Set/MinHeap.cpp)
add_executable(BuildHeap Heap&Set/BuildHeap.cpp)
add_executable(HuffmanTree Heap&Set/HuffmanTree.cpp)
add_executable(Set Heap&Set/Set.cpp)
add_executable(FileTransfer Heap&Set/FileTransfer.cpp)
add_executable(HeapPath Heap&Set/HeapPath.cpp)